--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo-list-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://angerris.github.io/todo-list-app/",
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "@reduxjs/toolkit": "^2.2.6",
@@ -14,6 +15,7 @@
     "@types/react-dom": "^18.3.0",
     "antd": "^5.19.1",
     "formik": "^2.4.6",
+    "gh-pages": "^6.1.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -24,6 +26,8 @@
     "yup": "^1.4.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
